--- a/roles/launchd_load/tasks/main.yml
+++ b/roles/launchd_load/tasks/main.yml
@@ -1,12 +1,12 @@
 # Load a launchd plist if it's not already loaded.
 ---
 - name: Check for job
-  command: "launchctl list {{ launchd_label }}"
+  command: "launchctl list {{ launchd_load_label }}"
   become: "{{ launchd_load_become | default(True) }}"
   register: throwaway
   ignore_errors: true
 
 - name: Load job
-  command: "launchctl load -w {{ launchd_plist }}"
+  command: "launchctl load -w {{ launchd_load_plist }}"
   become: "{{ launchd_load_become | default(True) }}"
   when: throwaway.rc != 0
