Turns out ssh wasn't included. It should be.
Also prefer command to shell.

--- a/setup-playbook.yml
+++ b/setup-playbook.yml
@@ -102,6 +102,10 @@
       tags:
         - customize
 
+    - import_tasks: tasks/ssh_setup.yml
+      tags:
+        - dotfiles
+
     - include_role:
         name: install_fonts_from_archive
         apply:
