Another place where command should be used instead of shell.

--- a/roles/install_from_dmg/tasks/main.yml
+++ b/roles/install_from_dmg/tasks/main.yml
@@ -37,7 +37,7 @@
         mountpoint: "{{ app_name }}"
 
     - name: Copy app to destination
-      shell: "cp -a '/Volumes/{{ app_name }}/{{ app_name }}.app' '{{ app_destination }}'"
+      command: "cp -a '/Volumes/{{ app_name }}/{{ app_name }}.app' '{{ app_destination }}'"
       when: install_method == 'cp'
 
     - name: Install package
