--- a/tasks/launchd_load.yml
+++ b/tasks/launchd_load.yml
@@ -6,4 +6,4 @@
     launchd_load_label: "{{ item.label }}"
     launchd_load_plist: "{{ item.plist }}"
     launchd_load_become: "{{ item.become | default(True) }}"
-  with_items: "{{ launchd_jobs }}"
+  loop: "{{ launchd_jobs }}"
