--- a/tasks/preliminaries.yml
+++ b/tasks/preliminaries.yml
@@ -14,6 +14,6 @@
     path: "{{ '~/var' | expanduser }}/{{ item }}"
     state: directory
     mode: u=rwx
-  with_items:
+  loop:
     - run
     - log
