--- a/roles/r_app/tasks/main.yml
+++ b/roles/r_app/tasks/main.yml
@@ -9,7 +9,7 @@
   block:
     - name: Download R package
       get_url:
-        url: "https://cloud.r-project.org/bin/macosx/base/R-{{ r_version }}.pkg"
+        url: "https://cloud.r-project.org/bin/macosx/base/R-{{ r_version }}-{{ ansible_machine }}.pkg"
         dest: "{{ downloads }}/R.pkg"
 
     - name: Install R
