--- a/roles/iterm2_shell_integration/tasks/main.yml
+++ b/roles/iterm2_shell_integration/tasks/main.yml
@@ -18,8 +18,8 @@
     mode: u=rwx,g=r,o=r
 - name: Install utilities
   get_url:
-    url: "https://iterm2.com/utilities/{{ iterm2_shell_integration }}"
-    dest: "{{ iterm2_shell_integration_utilities_dir }}/{{ utility }}"
+    url: "https://iterm2.com/utilities/{{ iterm2_shell_integration_utility }}"
+    dest: "{{ iterm2_shell_integration_utilities_dir }}/{{ iterm2_shell_integration_utility }}"
     mode: "u=rx,g=r,o=r"
   loop: "{{ iterm2_shell_integration_utilities }}"
   loop_control:
