--- a/roles/iterm2_shell_integration/tasks/main.yml
+++ b/roles/iterm2_shell_integration/tasks/main.yml
@@ -5,22 +5,31 @@
     iterm2_shell_integration_zsh_dir: "{{ lookup('ansible.builtin.env', 'ZDOTDIR', default='~/') | expanduser }}"
 - set_fact:
     iterm2_shell_integration_utilities_dir: "{{ iterm2_shell_integration_zsh_dir }}/.iterm2"
+- set_fact:
+    iterm2_shell_integration_script: "{{ iterm2_shell_integration_utilities_dir }}/.iterm2_shell_integration.zsh"
 
-- name: Install integration for zsh
-  get_url:
-    url: "https://iterm2.com/shell_integration/zsh"
-    # Dotfiles already assume this exists, so no need to add it to .zshrc or whatever.
-    dest: "{{ iterm2_shell_integration_zsh_dir }}/.iterm2_shell_integration.zsh"
-- name: Ensure utilities directory exists
-  file:
-    path: "{{ iterm2_shell_integration_utilities_dir }}"
-    state: directory
-    mode: u=rwx,g=r,o=r
-- name: Install utilities
-  get_url:
-    url: "https://iterm2.com/utilities/{{ iterm2_shell_integration_utility }}"
-    dest: "{{ iterm2_shell_integration_utilities_dir }}/{{ iterm2_shell_integration_utility }}"
-    mode: "u=rx,g=r,o=r"
-  loop: "{{ iterm2_shell_integration_utilities }}"
-  loop_control:
-    loop_var: iterm2_shell_integration_utility
+- stat:
+    path: "{{ iterm2_shell_integration_script }}"
+  register: throwaway
+  when: not iterm2_shell_integration_force_install
+
+- when: iterm2_shell_integration_force_install or not(throwaway.stat.isreg is defined and throwaway.stat.isreg)
+  block:
+    - name: Install integration for zsh
+      get_url:
+        url: "https://iterm2.com/shell_integration/zsh"
+        # Dotfiles already assume this exists, so no need to add it to .zshrc or whatever.
+        dest: "{{ iterm2_shell_integration_script }}"
+    - name: Ensure utilities directory exists
+      file:
+        path: "{{ iterm2_shell_integration_utilities_dir }}"
+        state: directory
+        mode: u=rwx,g=r,o=r
+    - name: Install utilities
+      get_url:
+        url: "https://iterm2.com/utilities/{{ iterm2_shell_integration_utility }}"
+        dest: "{{ iterm2_shell_integration_utilities_dir }}/{{ iterm2_shell_integration_utility }}"
+        mode: "u=rx,g=r,o=r"
+      loop: "{{ iterm2_shell_integration_utilities }}"
+      loop_control:
+        loop_var: iterm2_shell_integration_utility
