Add aws_cli role or new aws cli v2.

--- a/tasks/install_apps.yml
+++ b/tasks/install_apps.yml
@@ -30,6 +30,10 @@
   include_role:
     name: r_app
 
+- name: Install AWS CLI
+  include_role:
+    name: aws_cli
+
 - name: Download and install app from disk images
   include_role:
     name: install_from_dmg
