--- a/roles/iterm2/tasks/main.yml
+++ b/roles/iterm2/tasks/main.yml
@@ -3,13 +3,15 @@
 - stat:
     path: "{{ iterm2_app_path }}/{{ iterm2_app_name }}.app"
   register: throwaway
+  when: not(iterm2_force_install)
 
-- when: not (throwaway.stat.isdir is defined and throwaway.stat.isdir)
+- when: iterm2_force_install or not(throwaway.stat.isdir is defined and throwaway.stat.isdir)
   block:
     - name: Download iTerm2
       get_url:
         url: "https://iterm2.com/downloads/stable/iTerm2-{{ iterm2_version | replace('.', '_') }}.zip"
         dest: "{{ downloads }}/iterm2.zip"
+        force: "{{ iterm2_force_download }}"
     - name: Unzip iTerm2
       unarchive:
         dest: "{{ downloads }}"
