--- a/run-role-playbook.yml
+++ b/run-role-playbook.yml
@@ -6,6 +6,8 @@
   hosts: localhost
   become: false
   tasks:
+    - import_tasks: tasks/preliminaries.yml
+
     - fail:
         msg: "Extra var 'role' must have a value. Use -e role=<role to execute> to execute a role."
       when: role is not defined
