--- a/roles/emacs/defaults/main.yml
+++ b/roles/emacs/defaults/main.yml
@@ -5,3 +5,5 @@ emacs_bootstrap: false
 emacs_distclean: false
 # Whether to run make extraclean before configuring emacs. Mutually exclusive with distclean.
 emacs_extraclean: true
+# Directory where emacs source lives.
+emacs_src_dir: "{{ '~/src/emacs' | expanduser }}"
