--- a/vars/versions.yml
+++ b/vars/versions.yml
@@ -7,7 +7,7 @@ macports_version: "2.9.1"
 node_version: "20.10.0"
 node_npm_version: "10.2.5"
 picard_version: "2.8.5"
-r_version: "4.3.1"
+r_app_version: "4.3.1"
 skim_version: "1.6.21"
 terraform_version: "1.3.6"
 visualvm_version: "2.1.5"
