Fix some linter warnings.

--- a/roles/aws_cli/tasks/main.yml
+++ b/roles/aws_cli/tasks/main.yml
@@ -11,5 +11,5 @@
 
 - name: Install AWS CLI
   command: "installer -pkg {{ downloads }}/{{ aws_cli_package_name }} -target /"
-  become: yes
+  become: true
   when: aws_cli_force_install or not (throwaway.stat.executable is defined and throwaway.stat.executable)
