Upgrade terraform. Fix run role playbook (needs the vars files).

--- a/run-role-playbook.yml
+++ b/run-role-playbook.yml
@@ -5,6 +5,15 @@
 - name: Bootstrap
   hosts: localhost
   become: false
+  vars_files:
+    - vars/const.yml
+    - vars/dmgs.yml
+    - vars/fonts.yml
+    - vars/launchd.yml
+    - vars/mas.yml
+    - vars/pip.yml
+    - vars/ports.yml
+    - vars/versions.yml
   tasks:
     - import_tasks: tasks/preliminaries.yml
 
