Add explicit file permissions to resolve linter warnings.

--- a/roles/emacs/tasks/main.yml
+++ b/roles/emacs/tasks/main.yml
@@ -46,6 +46,7 @@
   file:
     path: "{{ emacs_src_dir }}/nextstep/Emacs.app/Contents/Frameworks"
     state: directory
+    mode: u=rwx,g=rx,o=rx
 
 # From a handy tip here
 # https://www.reddit.com/r/emacs/comments/bclyyc/building_emacs_from_source_on_macos/
