--- a/roles/aws_cli/tasks/main.yml
+++ b/roles/aws_cli/tasks/main.yml
@@ -8,6 +8,7 @@
     url: "https://awscli.amazonaws.com/{{ aws_cli_package_name }}"
     dest: "{{ downloads }}/{{ aws_cli_package_name }}"
     force: "{{ aws_cli_force_download }}"
+    mode: u=rw
 
 - name: Install AWS CLI
   command: "installer -pkg {{ downloads }}/{{ aws_cli_package_name }} -target /"
