--- a/roles/macports/tasks/main.yml
+++ b/roles/macports/tasks/main.yml
@@ -25,6 +25,7 @@
         url: "https://distfiles.macports.org/MacPorts/{{ macports_macos_package_name }}"
         dest: "{{ downloads }}/macports.pkg"
         force: "{{ mactex_force_install }}"
+        mode: u=rw
 
     - name: Install MacPorts
       command: "installer -pkg {{ downloads }}/macports.pkg -target /"
