--- a/roles/r_app/tasks/main.yml
+++ b/roles/r_app/tasks/main.yml
@@ -12,6 +12,7 @@
         url: "https://cran.r-project.org/bin/macosx/big-sur-x86_64/base/R-{{ r_app_version }}-{{ ansible_machine }}.pkg"
         dest: "{{ downloads }}/R.pkg"
         force: "{{ r_app_force_download }}"
+        mode: u=rw
 
     - name: Install R
       command: "installer -pkg {{ downloads }}/R.pkg -target /"
