--- a/roles/xact/tasks/main.yml
+++ b/roles/xact/tasks/main.yml
@@ -14,17 +14,23 @@
     - file:
         path: "{{ xact_unarchive_dir }}"
         state: directory
+        mode: u=rwx
+
     - name: Download xACT
       get_url:
         url: "http://xact.scottcbrown.org/xACT{{ xact_version }}.zip"
         dest: "{{ xact_local_zip }}"
         force: "{{ xact_force_download }}"
+        mode: u=rw
+
     - name: Unzip xACT
       unarchive:
         dest: "{{ xact_unarchive_dir }}"
         src: "{{ xact_local_zip }}"
+
     - name: Install xACT
       command: "mv {{ downloads }}/xACT/xACT{{ xact_version }}/{{ xact_app_name }}.app {{ xact_app_path }}"
+
   always:
     - file:
         path: "{{ xact_unarchive_dir }}"
