Add 1Password for Safari to mas list.

--- a/vars/mas.yml
+++ b/vars/mas.yml
@@ -8,3 +8,4 @@ mas_apps_to_install:
     - 1496833156  # Playgrounds
     - 1066107760  # Star Realms
     - 406479348   # Decked Builder
+    - 1569813296  # 1Password for Safari
