--- a/setup-playbook.yml
+++ b/setup-playbook.yml
@@ -10,6 +10,7 @@
     - vars/fonts.yml
     - vars/launchd.yml
     - vars/mas.yml
+    - vars/node_global_modules.yml
     - vars/pip.yml
     - vars/ports.yml
     - vars/versions.yml
