--- a/roles/node/defaults/main.yml
+++ b/roles/node/defaults/main.yml
@@ -3,3 +3,10 @@
 node_npm_version:
 # Version of yarn to install. None => don't install any. 'latest' => install latest version.
 node_yarn_version:
+
+# List of global modules to install.
+# This variable must contain a list of items, each of which nas a name and optional version. The module with the given
+# name and version will be installed by the `node` role.
+#   name is required.
+#   version is optional. If omitted, the default is `latest`.
+node_global_modules_to_install: {}
