Add set_screenshot_location role.
This role sets the location to which macOS saves screen capture files.

A reasonable default (~/Documents/Screenshots) is provided, and can be
overwritten with the role variable set_screenshot_location_folder.

--- a/setup-playbook.yml
+++ b/setup-playbook.yml
@@ -92,6 +92,14 @@
       tags:
         - customize
 
+    - import_role:
+        name: set_screenshot_location
+        apply:
+          tags:
+            - customize
+      tags:
+        - customize
+
     - import_tasks: tasks/ssh_setup.yml
       tags:
         - dotfiles
