MS Remote Desktop is now Windows App. Update comment.

--- a/vars/mas.yml
+++ b/vars/mas.yml
@@ -3,7 +3,7 @@
 mas_apps_to_install:
     - "453114608"   # JSON Helper
     - "803453959"   # Slack
-    - "1295203466"  # MS Remote Desktop 10
+    - "1295203466"  # Windows App (formerly MS Remote Desktop)
     - "1496833156"  # Playgrounds
     - "1066107760"  # Star Realms
     - "406479348"   # Decked Builder
