--- a/vars/mas.yml
+++ b/vars/mas.yml
@@ -10,3 +10,4 @@ mas_apps_to_install:
     - "1569813296"  # 1Password for Safari
     - "302584613"   # Kindle
     - "405399194"   # Kindle Classic
+    - "310633997"   # WhatsApp
