Fonts install again.
Not sure what's up with that tempdir call...probably moved from a
command-line invocation to a task and forgot to update the result
registration.

Also put some prefixes on vars, which should make ansible-lint happier.

--- a/roles/install_fonts_from_archive/defaults/main.yml
+++ b/roles/install_fonts_from_archive/defaults/main.yml
@@ -1,2 +1,2 @@
 ---
-fonts_dir: "{{ '~/Library/Fonts' | expanduser }}"
+install_fonts_from_archive_fonts_dir: "{{ '~/Library/Fonts' | expanduser }}"
