--- a/roles/install_fonts_from_archive/tasks/main.yml
+++ b/roles/install_fonts_from_archive/tasks/main.yml
@@ -7,12 +7,12 @@
   register: throwaway
 
 - set_fact:
-    install_fonts_from_archive_tempdir: "{{ throwaway.stdout }}"
+    install_fonts_from_archive_tempdir: "{{ throwaway.path }}"
 
 - block:
     - name: Download archive
       get_url:
-        url: "{{ font_archive_url }}"
+        url: "{{ install_fonts_from_archive_url }}"
         dest: "{{ install_fonts_from_archive_tempdir }}/font.zip"
         mode: u=rw
 
@@ -41,7 +41,7 @@
     - name: Install fonts
       copy:
         src: "{{ install_fonts_from_archive_item }}"
-        dest: "{{ fonts_dir }}"
+        dest: "{{ install_fonts_from_archive_fonts_dir }}"
         mode: u=rw,g=r,o=r
       loop: "{{ install_fonts_from_archive_font_files }}"
       loop_control:
